Replace deprecated
Class.forName("").newInstance();
to
 Class.forName("").getDeclaredConstructor().newInstance();